run.sh and run.bat refreshed for jdk17